Edit Felder vom Testing ins Modal verschoben

--- a/src/main/scss/_popup.scss
+++ b/src/main/scss/_popup.scss
@@ -37,4 +37,8 @@
 .popup-content {
   text-align: center;
   color: black;
+  padding-bottom: 10%;
+  padding-top: 4%;
+  padding-right: 8%;
+  padding-left: 8%;
 }
